complete getcpu transition to separate module
Add getcpu.c to the build, move code as necessary to vdsotest.h,
remove now-redundant code from vdsotest.c.

--- a/Makefile.am
+++ b/Makefile.am
@@ -18,5 +18,5 @@ AM_LDFLAGS = \
 	-Wl,--as-needed
 
 bin_PROGRAMS = vdsotest
-vdsotest_SOURCES = src/vdsotest.c src/util.c
+vdsotest_SOURCES = src/vdsotest.c src/util.c src/getcpu.c
 vdsotest_LDADD = -lrt
