--- a/Makefile.am
+++ b/Makefile.am
@@ -19,12 +19,18 @@ AM_LDFLAGS = \
 
 bin_PROGRAMS = vdsotest
 vdsotest_SOURCES = \
-	src/clock-monotonic-coarse.c \
 	src/clock-monotonic.c \
-	src/clock-realtime-coarse.c \
+	src/clock-monotonic-coarse.c \
 	src/clock-realtime.c \
+	src/clock-realtime-coarse.c \
+	src/compiler.h \
 	src/getcpu.c \
 	src/gettimeofday.c \
 	src/util.c \
-	src/vdsotest.c
+	src/util.h \
+	src/vdsotest.c \
+	src/vdsotest.h
+
 vdsotest_LDADD = -lrt -ldl
+
+EXTRA_DIST = src/clock_getres_template.c src/clock_gettime_template.c
